<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.teem0.www.phone_num_generator.MainActivity">

    <Button
        android:id="@+id/generate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="142dp"
        android:layout_marginTop="342dp"
        android:text="@string/button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
       />

    <TextView
        android:id="@+id/prefix"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="131dp"
        android:text="@string/prefix"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/prefix_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Typeyourpre"
        android:inputType="textPersonName"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="118dp"
        app:layout_constraintLeft_toRightOf="@+id/prefix"
        android:layout_marginLeft="1dp" />

    <EditText
        android:id="@+id/count_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Typeyournum"
        android:inputType="numberSigned"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="255dp"
        app:layout_constraintLeft_toRightOf="@+id/count"
        android:layout_marginLeft="1dp" />

    <TextView
        android:id="@+id/count"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="268dp"
        android:text="@string/howmany"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pre_exam"
        android:layout_width="335dp"
        android:layout_height="31dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="161dp"
        android:layout_marginLeft="33dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/preeaxm"/>

    <TextView
        android:id="@+id/group"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="44dp"
        android:text="그룹이름"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prefix" />

    <EditText
        android:id="@+id/group_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="31dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/TypeyourGroup"
        app:layout_constraintLeft_toRightOf="@+id/group"
        app:layout_constraintTop_toBottomOf="@+id/prefix_in" />

    <TextView
        android:id="@+id/copyRight"
        android:layout_width="97dp"
        android:layout_height="25dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="526dp"
        android:layout_marginLeft="144dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/copyright" />
</android.support.constraint.ConstraintLayout>
